developed about and skills section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,62 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <H3>Portfolio</H3>
+        <div class="navbar">
+            <a href="#">About</a>
+            <a href="#">Skill</a>
+            <a href="#">Projects</a>
+            <a href="#">Contact</a>
+        </div>
+    </header>
+    <div class="about-section">
+        <div class="about-content">
+            <h4>Creative Designer at Ansira</h4>
+            <h2>Hey ! I'm Priyanka</h2>
+            <p>Creative Designer shaping ideas into impactful visuals. I specialize in graphic design, video editing, motion graphics, and UI/UX design and research, blending creativity with user insight to craft designs that inspire and engage.</p>
+            <div class="resume-link">
+                <p>My Resume</p>
+                <a href="#"><img src="images/Group 1.svg" alt="mark"></a>
+            </div>
+        </div>
+        <div class="main-img">
+            <img src="images/main-img.jpg" alt="main-img">
+        </div>
+    </div>
+
+    <div class="skills-section">
+        <h2>My Skills</h2>
+        <div class="skill-swipe">
+            <div class="skills-box">
+                <div class="skill-icon"><img src="images/Layer_7.svg" alt=""></div>
+                <p>Print Design</p>
+            </div>
+            <div class="skills-box">
+                <div class="skill-icon"><img src="images/AdobeStock_503948939-02 1.svg" alt=""></div>
+                <p>Print Design</p>
+            </div>
+            <div class="skills-box">
+                <div class="skill-icon"><img src="images/AdobeStock_503948939-03 1.png" alt=""></div>
+                <p>Print Design</p>
+            </div>
+            <div class="skills-box">
+                <div class="skill-icon"><img src="images/AdobeStock_503948939-04 1.svg" alt=""></div>
+                <p>Print Design</p>
+            </div>
+            <div class="skills-box">
+                <div class="skill-icon"><img src="images/AdobeStock_503948939-05 1 (1).svg" alt=""></div>
+                <p>Print Design</p>
+            </div>
+            <div class="skills-box">
+                <div class="skill-icon"><img src="images/AdobeStock_503948939-06 1.svg" alt=""></div>
+                <p>Print Design</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="projects-section">
+
+    </div>
 </body>
 </html>
