created and developed print design page

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header>
         <H3>Portfolio</H3>
         <div class="navbar">
-            <a href="#">About</a>
-            <a href="#">Skill</a>
-            <a href="#">Projects</a>
-            <a href="#">Contact</a>
+            <a href="#about">About</a>
+            <a href="#skill">Skill</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
         </div>
     </header>
-    <div class="about-section">
+    <div class="about-section" id="about">
         <div class="about-content">
             <h4>Creative Designer at Ansira</h4>
             <h2>Hey ! I'm Priyanka</h2>
@@ -32,38 +32,124 @@
         </div>
     </div>
 
-    <div class="skills-section">
+    <div class="skills-section" id="skill">
         <h2>My Skills</h2>
         <div class="skill-swipe">
-            <div class="skills-box">
-                <div class="skill-icon"><img src="images/Layer_7.svg" alt=""></div>
-                <p>Print Design</p>
+            <div class="group">
+                <div class="skills-box">
+                    <div class="skill-icon"><img src="images/Layer_7.svg" alt=""></div>
+                    <p>Print Design</p>
+                </div>
+                <div class="skills-box">
+                    <div class="skill-icon"><img src="images/AdobeStock_503948939-02 1.svg" alt=""></div>
+                    <p>Digital Ads</p>
+                </div>
+                <div class="skills-box">
+                    <div class="skill-icon"><img src="images/AdobeStock_503948939-03 1.png" alt=""></div>
+                    <p>Motion Graphics</p>
+                </div>
+                <div class="skills-box">
+                    <div class="skill-icon"><img src="images/AdobeStock_503948939-04 1.svg" alt=""></div>
+                    <p>Animation</p>
+                </div>
+                <div class="skills-box">
+                    <div class="skill-icon"><img src="images/AdobeStock_503948939-05 1 (1).svg" alt=""></div>
+                    <p>Video Editing</p>
+                </div>
+                <div class="skills-box">
+                    <div class="skill-icon"><img src="images/AdobeStock_503948939-06 1.svg" alt=""></div>
+                    <p>UX Research</p>
+                </div>
             </div>
-            <div class="skills-box">
-                <div class="skill-icon"><img src="images/AdobeStock_503948939-02 1.svg" alt=""></div>
-                <p>Print Design</p>
-            </div>
-            <div class="skills-box">
-                <div class="skill-icon"><img src="images/AdobeStock_503948939-03 1.png" alt=""></div>
-                <p>Print Design</p>
-            </div>
-            <div class="skills-box">
-                <div class="skill-icon"><img src="images/AdobeStock_503948939-04 1.svg" alt=""></div>
-                <p>Print Design</p>
-            </div>
-            <div class="skills-box">
-                <div class="skill-icon"><img src="images/AdobeStock_503948939-05 1 (1).svg" alt=""></div>
-                <p>Print Design</p>
-            </div>
-            <div class="skills-box">
-                <div class="skill-icon"><img src="images/AdobeStock_503948939-06 1.svg" alt=""></div>
-                <p>Print Design</p>
+            <div aria-hidden class="group">
+                <div class="skills-box">
+                    <div class="skill-icon"><img src="images/Layer_7.svg" alt=""></div>
+                    <p>Print Design</p>
+                </div>
+                <div class="skills-box">
+                    <div class="skill-icon"><img src="images/AdobeStock_503948939-02 1.svg" alt=""></div>
+                    <p>Digital Ads</p>
+                </div>
+                <div class="skills-box">
+                    <div class="skill-icon"><img src="images/AdobeStock_503948939-03 1.png" alt=""></div>
+                    <p>Motion Graphics</p>
+                </div>
+                <div class="skills-box">
+                    <div class="skill-icon"><img src="images/AdobeStock_503948939-04 1.svg" alt=""></div>
+                    <p>Animation</p>
+                </div>
+                <div class="skills-box">
+                    <div class="skill-icon"><img src="images/AdobeStock_503948939-05 1 (1).svg" alt=""></div>
+                    <p>Video Editing</p>
+                </div>
+                <div class="skills-box">
+                    <div class="skill-icon"><img src="images/AdobeStock_503948939-06 1.svg" alt=""></div>
+                    <p>UX Research</p>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="projects-section">
+    <div class="projects-section" id="projects">
+        <h2>Projects</h2>
+        <div class="project-cards">
+            <div class="card">
+                <div class="project-img-container">
+                    <img src="images/Newspaper 1.png" alt="newspaper">
+                </div>
+                <div class="project-name">
+                    <p>Print Design</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="project-img-container">
+                    <img src="images/Newspaper 1.png" alt="newspaper">
+                </div>
+                <div class="project-name">
+                    <p>Print Design</p>
+                </div>
+            </div>
+            <a href="printdesign.html" class="card">
+                <div class="project-img-container">
+                    <img src="images/Newspaper 1.png" alt="newspaper">
+                </div>
+                <div class="project-name">
+                    <p>Print Design</p>
+                </div>
+            </a>
+            <div class="card">
+                <div class="project-img-container">
+                    <img src="images/Newspaper 1.png" alt="newspaper">
+                </div>
+                <div class="project-name">
+                    <p>Print Design</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="project-img-container">
+                    <img src="images/Newspaper 1.png" alt="newspaper">
+                </div>
+                <div class="project-name">
+                    <p>Print Design</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="get-in-touch" id="contact">
+        <h2>Get in touch</h2>
+        <div class="btn-container">
+            <a href="#">
+                <p>Linkedin</p>
+                <img src="images/Group 1.svg" alt="mark">
+            </a>
+            <a href="#">
+                <p>Behance</p>
+                <img src="images/Group 1.svg" alt="mark">
+            </a>
+        </div>
+        <h5>priyankashri88@gmail.com</h5>
+        <p class="copyright">© 2025 Priyanka Shrivastava</p>
     </div>
 </body>
 </html>
