developed project carousel

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <H3>Portfolio</H3>
+        <a href="index.html"><H3>Portfolio</H3></a>
         <div class="navbar">
             <a href="#about">About</a>
             <a href="#skill">Skill</a>
@@ -93,22 +93,6 @@
     <div class="projects-section" id="projects">
         <h2>Projects</h2>
         <div class="project-cards">
-            <div class="card">
-                <div class="project-img-container">
-                    <img src="images/Newspaper 1.png" alt="newspaper">
-                </div>
-                <div class="project-name">
-                    <p>Print Design</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="project-img-container">
-                    <img src="images/Newspaper 1.png" alt="newspaper">
-                </div>
-                <div class="project-name">
-                    <p>Print Design</p>
-                </div>
-            </div>
             <a href="printdesign.html" class="card">
                 <div class="project-img-container">
                     <img src="images/Newspaper 1.png" alt="newspaper">
@@ -117,23 +101,42 @@
                     <p>Print Design</p>
                 </div>
             </a>
-            <div class="card">
+            <a href="printdesign.html" class="card">
                 <div class="project-img-container">
                     <img src="images/Newspaper 1.png" alt="newspaper">
                 </div>
                 <div class="project-name">
                     <p>Print Design</p>
                 </div>
-            </div>
-            <div class="card">
+            </a>
+            <a href="printdesign.html" class="card">
                 <div class="project-img-container">
                     <img src="images/Newspaper 1.png" alt="newspaper">
                 </div>
                 <div class="project-name">
                     <p>Print Design</p>
                 </div>
-            </div>
+            </a>
+            <a href="printdesign.html" class="card">
+                <div class="project-img-container">
+                    <img src="images/Newspaper 1.png" alt="newspaper">
+                </div>
+                <div class="project-name">
+                    <p>Print Design</p>
+                </div>
+            </a>
+            <a href="printdesign.html" class="card">
+                <div class="project-img-container">
+                    <img src="images/Newspaper 1.png" alt="newspaper">
+                </div>
+                <div class="project-name">
+                    <p>Print Design</p>
+                </div>
+            </a>
         </div>
+        <button id="prev"><</button>
+        <button id="next">></button>
+        <a href="#"><button id="go-to-top">↑</button></a>
     </div>
 
     <div class="get-in-touch" id="contact">
