--- a/printdesign.html
+++ b/printdesign.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <H3>Portfolio</H3>
+        <a href="index.html"><H3>Portfolio</H3></a>
         <div class="navbar">
             <a href="index.html">About</a>
             <a href="index.html#skill">Skill</a>
