updated index html

--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
     <div class="projects-section" id="projects">
         <h2>Projects</h2>
         <div class="project-cards">
-            <a href="printdesign.html" class="card">
+            <a href="printdesign.html" class="card" id="Digital-card">
                 <div class="project-img-container">
-                    <img src="images/Newspaper 1.png" alt="newspaper">
+                    <img src="images/Chevy 1.png" alt="newspaper">
                 </div>
                 <div class="project-name">
-                    <p>Print Design</p>
+                    <p>Digital Design</p>
                 </div>
             </a>
             <a href="printdesign.html" class="card">
@@ -109,34 +109,26 @@
                     <p>Print Design</p>
                 </div>
             </a>
-            <a href="printdesign.html" class="card">
+            <a href="printdesign.html" class="card" id="motion-card">
                 <div class="project-img-container">
-                    <img src="images/Newspaper 1.png" alt="newspaper">
+                    <img src="images/Screenshot 2025-10-28 at 8.30.01 PM 1.png" alt="Motion Graphic">
                 </div>
                 <div class="project-name">
-                    <p>Print Design</p>
+                    <p>Motion Graphic</p>
                 </div>
             </a>
-            <a href="printdesign.html" class="card">
+            <a href="printdesign.html" class="card" id="video-card">
                 <div class="project-img-container">
-                    <img src="images/Newspaper 1.png" alt="newspaper">
+                    <img src="images/Screenshot 2025-10-28 at 8.52.33 PM 1 (1).png" alt="newspaper">
                 </div>
                 <div class="project-name">
-                    <p>Print Design</p>
-                </div>
-            </a>
-            <a href="printdesign.html" class="card">
-                <div class="project-img-container">
-                    <img src="images/Newspaper 1.png" alt="newspaper">
-                </div>
-                <div class="project-name">
-                    <p>Print Design</p>
+                    <p>Video</p>
                 </div>
             </a>
         </div>
-        <button id="prev"><</button>
-        <button id="next">></button>
-        <a href="#"><button id="go-to-top">↑</button></a>
+        <button id="prev" class="projects-section-button"><</button>
+        <button id="next" class="projects-section-button">></button>
+        <a href="#"><button id="go-to-top" class="projects-section-button">↑</button></a>
     </div>
 
     <div class="get-in-touch" id="contact">
