Added my changes and new files

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="projects-section" id="projects">
         <h2>Projects</h2>
         <div class="project-cards">
-            <a href="printdesign.html" class="card" id="Digital-card">
+            <a href="digitaldesign.html" class="card" id="Digital-card">
                 <div class="project-img-container">
                     <img src="images/Chevy 1.png" alt="newspaper">
                 </div>
