digital-design-updated

--- a/digitaldesign.html
+++ b/digitaldesign.html
@@ -40,10 +40,12 @@
             </div>
 
             <div class="interactive-pdf-dd">
-                <p class="pd-para-dd">
-                    Interactive PDF
-                </p>
-                <img class="interactive-img-dd" src="digital-design-images/Group 23.png" alt="billboad">
+                <p class="pd-para-dd">Interactive PDF</p>
+                <iframe 
+                    class="interactive-frame-dd" 
+                    src="digital-design-images/Honda Newsletter_Q1 2025_V2.pdf" 
+                    title="pdf file">
+                </iframe>    
             </div>
         </div>
 
