--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <header>
+    <div class="container-main">
+        <header>
         <a href="index.html"><H3>Portfolio</H3></a>
         <div class="navbar">
             <a href="#about">About</a>
@@ -16,135 +17,136 @@
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </div>
-    </header>
-    <div class="about-section" id="about">
-        <div class="about-content">
-            <h4>Creative Designer at Ansira</h4>
-            <h2>Hey ! I'm Priyanka</h2>
-            <p>Creative Designer shaping ideas into impactful visuals. I specialize in graphic design, video editing, motion graphics, and UI/UX design and research, blending creativity with user insight to craft designs that inspire and engage.</p>
-            <div class="resume-link">
-                <p>My Resume</p>
-                <a href="#"><img src="images/Group 1.svg" alt="mark"></a>
-            </div>
-        </div>
-        <div class="main-img">
-            <img src="images/main-img.jpg" alt="main-img">
-        </div>
-    </div>
-
-    <div class="skills-section" id="skill">
-        <h2>My Skills</h2>
-        <div class="skill-swipe">
-            <div class="group">
-                <div class="skills-box">
-                    <div class="skill-icon"><img src="images/Layer_7.svg" alt=""></div>
-                    <p>Print Design</p>
-                </div>
-                <div class="skills-box">
-                    <div class="skill-icon"><img src="images/AdobeStock_503948939-02 1.svg" alt=""></div>
-                    <p>Digital Ads</p>
-                </div>
-                <div class="skills-box">
-                    <div class="skill-icon"><img src="images/AdobeStock_503948939-03 1.png" alt=""></div>
-                    <p>Motion Graphics</p>
-                </div>
-                <div class="skills-box">
-                    <div class="skill-icon"><img src="images/AdobeStock_503948939-04 1.svg" alt=""></div>
-                    <p>Animation</p>
-                </div>
-                <div class="skills-box">
-                    <div class="skill-icon"><img src="images/AdobeStock_503948939-05 1 (1).svg" alt=""></div>
-                    <p>Video Editing</p>
-                </div>
-                <div class="skills-box">
-                    <div class="skill-icon"><img src="images/AdobeStock_503948939-06 1.svg" alt=""></div>
-                    <p>UX Research</p>
+        </header>
+        <div class="about-section" id="about">
+            <div class="about-content">
+                <h4>Creative Designer at Ansira</h4>
+                <h2>Hey ! I'm Priyanka</h2>
+                <p>Creative Designer shaping ideas into impactful visuals. I specialize in graphic design, video editing, motion graphics, and UI/UX design and research, blending creativity with user insight to craft designs that inspire and engage.</p>
+                <div class="resume-link">
+                    <p>My Resume</p>
+                    <a href="#"><img src="images/Group 1.svg" alt="mark"></a>
                 </div>
             </div>
-            <div aria-hidden class="group">
-                <div class="skills-box">
-                    <div class="skill-icon"><img src="images/Layer_7.svg" alt=""></div>
-                    <p>Print Design</p>
+            <div class="main-img">
+                <img src="images/main-img.jpg" alt="main-img">
+            </div>
+        </div>
+
+        <div class="skills-section" id="skill">
+            <h2>My Skills</h2>
+            <div class="skill-swipe">
+                <div class="group">
+                    <div class="skills-box">
+                        <div class="skill-icon"><img src="images/Layer_7.svg" alt=""></div>
+                        <p>Print Design</p>
+                    </div>
+                    <div class="skills-box">
+                        <div class="skill-icon"><img src="images/AdobeStock_503948939-02 1.svg" alt=""></div>
+                        <p>Digital Ads</p>
+                    </div>
+                    <div class="skills-box">
+                        <div class="skill-icon"><img src="images/AdobeStock_503948939-03 1.png" alt=""></div>
+                        <p>Motion Graphics</p>
+                    </div>
+                    <div class="skills-box">
+                        <div class="skill-icon"><img src="images/AdobeStock_503948939-04 1.svg" alt=""></div>
+                        <p>Animation</p>
+                    </div>
+                    <div class="skills-box">
+                        <div class="skill-icon"><img src="images/AdobeStock_503948939-05 1 (1).svg" alt=""></div>
+                        <p>Video Editing</p>
+                    </div>
+                    <div class="skills-box">
+                        <div class="skill-icon"><img src="images/AdobeStock_503948939-06 1.svg" alt=""></div>
+                        <p>UX Research</p>
+                    </div>
                 </div>
-                <div class="skills-box">
-                    <div class="skill-icon"><img src="images/AdobeStock_503948939-02 1.svg" alt=""></div>
-                    <p>Digital Ads</p>
-                </div>
-                <div class="skills-box">
-                    <div class="skill-icon"><img src="images/AdobeStock_503948939-03 1.png" alt=""></div>
-                    <p>Motion Graphics</p>
-                </div>
-                <div class="skills-box">
-                    <div class="skill-icon"><img src="images/AdobeStock_503948939-04 1.svg" alt=""></div>
-                    <p>Animation</p>
-                </div>
-                <div class="skills-box">
-                    <div class="skill-icon"><img src="images/AdobeStock_503948939-05 1 (1).svg" alt=""></div>
-                    <p>Video Editing</p>
-                </div>
-                <div class="skills-box">
-                    <div class="skill-icon"><img src="images/AdobeStock_503948939-06 1.svg" alt=""></div>
-                    <p>UX Research</p>
+                <div aria-hidden class="group">
+                    <div class="skills-box">
+                        <div class="skill-icon"><img src="images/Layer_7.svg" alt=""></div>
+                        <p>Print Design</p>
+                    </div>
+                    <div class="skills-box">
+                        <div class="skill-icon"><img src="images/AdobeStock_503948939-02 1.svg" alt=""></div>
+                        <p>Digital Ads</p>
+                    </div>
+                    <div class="skills-box">
+                        <div class="skill-icon"><img src="images/AdobeStock_503948939-03 1.png" alt=""></div>
+                        <p>Motion Graphics</p>
+                    </div>
+                    <div class="skills-box">
+                        <div class="skill-icon"><img src="images/AdobeStock_503948939-04 1.svg" alt=""></div>
+                        <p>Animation</p>
+                    </div>
+                    <div class="skills-box">
+                        <div class="skill-icon"><img src="images/AdobeStock_503948939-05 1 (1).svg" alt=""></div>
+                        <p>Video Editing</p>
+                    </div>
+                    <div class="skills-box">
+                        <div class="skill-icon"><img src="images/AdobeStock_503948939-06 1.svg" alt=""></div>
+                        <p>UX Research</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="projects-section" id="projects">
-        <h2>Projects</h2>
-        <div class="project-cards">
-            <a href="printdesign.html" class="card" id="Digital-card">
-                <div class="project-img-container">
-                    <img src="images/Chevy 1.png" alt="newspaper">
-                </div>
-                <div class="project-name">
-                    <p>Digital Design</p>
-                </div>
-            </a>
-            <a href="printdesign.html" class="card">
-                <div class="project-img-container">
-                    <img src="images/Newspaper 1.png" alt="newspaper">
-                </div>
-                <div class="project-name">
-                    <p>Print Design</p>
-                </div>
-            </a>
-            <a href="printdesign.html" class="card" id="motion-card">
-                <div class="project-img-container">
-                    <img src="images/Screenshot 2025-10-28 at 8.30.01 PM 1.png" alt="Motion Graphic">
-                </div>
-                <div class="project-name">
-                    <p>Motion Graphic</p>
-                </div>
-            </a>
-            <a href="printdesign.html" class="card" id="video-card">
-                <div class="project-img-container">
-                    <img src="images/Screenshot 2025-10-28 at 8.52.33 PM 1 (1).png" alt="newspaper">
-                </div>
-                <div class="project-name">
-                    <p>Video</p>
-                </div>
-            </a>
+        <div class="projects-section" id="projects">
+            <h2>Projects</h2>
+            <div class="project-cards">
+                <a href="printdesign.html" class="card" id="Digital-card">
+                    <div class="project-img-container">
+                        <img src="images/Chevy 1.png" alt="newspaper">
+                    </div>
+                    <div class="project-name">
+                        <p>Digital Design</p>
+                    </div>
+                </a>
+                <a href="printdesign.html" class="card">
+                    <div class="project-img-container">
+                        <img src="images/Newspaper 1.png" alt="newspaper">
+                    </div>
+                    <div class="project-name">
+                        <p>Print Design</p>
+                    </div>
+                </a>
+                <a href="printdesign.html" class="card" id="motion-card">
+                    <div class="project-img-container">
+                        <img src="images/Screenshot 2025-10-28 at 8.30.01 PM 1.png" alt="Motion Graphic">
+                    </div>
+                    <div class="project-name">
+                        <p>Motion Graphic</p>
+                    </div>
+                </a>
+                <a href="videos.html" class="card" id="video-card">
+                    <div class="project-img-container">
+                        <img src="images/Screenshot 2025-10-28 at 8.52.33 PM 1 (1).png" alt="newspaper">
+                    </div>
+                    <div class="project-name">
+                        <p>Video</p>
+                    </div>
+                </a>
+            </div>
+            <button id="prev" class="projects-section-button"><</button>
+            <button id="next" class="projects-section-button">></button>
+            <a href="#"><button id="go-to-top" class="projects-section-button">↑</button></a>
         </div>
-        <button id="prev" class="projects-section-button"><</button>
-        <button id="next" class="projects-section-button">></button>
-        <a href="#"><button id="go-to-top" class="projects-section-button">↑</button></a>
-    </div>
 
-    <div class="get-in-touch" id="contact">
-        <h2>Get in touch</h2>
-        <div class="btn-container">
-            <a href="#">
-                <p>Linkedin</p>
-                <img src="images/Group 1.svg" alt="mark">
-            </a>
-            <a href="#">
-                <p>Behance</p>
-                <img src="images/Group 1.svg" alt="mark">
-            </a>
+        <div class="get-in-touch" id="contact">
+            <h2>Get in touch</h2>
+            <div class="btn-container">
+                <a href="#">
+                    <p>Linkedin</p>
+                    <img src="images/Group 1.svg" alt="mark">
+                </a>
+                <a href="#">
+                    <p>Behance</p>
+                    <img src="images/Group 1.svg" alt="mark">
+                </a>
+            </div>
+            <h5>priyankashri88@gmail.com</h5>
+            <p class="copyright">© 2025 Priyanka Shrivastava</p>
         </div>
-        <h5>priyankashri88@gmail.com</h5>
-        <p class="copyright">© 2025 Priyanka Shrivastava</p>
     </div>
 </body>
 </html>
