--- a/printdesign.html
+++ b/printdesign.html
@@ -18,7 +18,7 @@
         </div>
     </header>
     <div class="kohler-container">
-        <div class="Pd-heading">
+        <div class="heading">
             <h2>Print Design</h2>
         </div>
         <div class="billboad-container">
