completed video page

--- a/digitaldesign.html
+++ b/digitaldesign.html
@@ -129,7 +129,7 @@
 
     <div class="bobcat-footer-error">
         <p class="pd-para">
-            © 2025 Priyanka Shrivastava
+            © Priyanka Shrivastav
         </p>
         <p class="pd-para">
             Print Design
