--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Priyanka Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -94,7 +94,7 @@
     <div class="projects-section" id="projects">
         <h2>Projects</h2>
         <div class="project-cards">
-            <a href="printdesign.html" class="card" id="Digital-card">
+            <a href="digitaldesign.html" target="_blank" class="card" id="Digital-card">
                 <div class="project-img-container">
                     <img src="images/Chevy 1.png" alt="newspaper">
                 </div>
@@ -102,7 +102,7 @@
                     <p>Digital Design</p>
                 </div>
             </a>
-            <a href="printdesign.html" class="card">
+            <a href="printdesign.html" target="_blank" class="card">
                 <div class="project-img-container">
                     <img src="images/Newspaper 1.png" alt="newspaper">
                 </div>
@@ -118,7 +118,7 @@
                     <p>Motion Graphic</p>
                 </div>
             </a>
-            <a href="printdesign.html" class="card" id="video-card">
+            <a href="videos.html" target="_blank" class="card" id="video-card">
                 <div class="project-img-container">
                     <img src="images/Screenshot 2025-10-28 at 8.52.33 PM 1 (1).png" alt="newspaper">
                 </div>
@@ -145,7 +145,7 @@
                 </a>
             </div>
             <h5>priyankashri88@gmail.com</h5>
-            <p class="copyright">© 2025 Priyanka Shrivastava</p>
+            <p class="copyright">© Priyanka Shrivastav</p>
         </div>
     </div>
 </body>
