--- a/videos.html
+++ b/videos.html
@@ -12,16 +12,19 @@
         <header>
         <a href="index.html"><H3>Portfolio</H3></a>
         <div class="navbar">
-            <a href="#about">About</a>
-            <a href="#skill">Skill</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
+            <a href="index.html">About</a>
+            <a href="index.html#skill">Skill</a>
+            <a href="index.html#projects">Projects</a>
+            <a href="index.html#contact">Contact</a>
         </div>
         </header>
         <section class="heading">
             <h3>Video</h3>
         </section>
         <section class="video-box">
+            <div class="line-video">
+                <img src="video-images/Vector 11.png" alt="">
+            </div>
             <div class="video-card">
                 <div class="video-text">
                     <h2>Nissan</h2>
@@ -29,7 +32,7 @@
                 </div>
                 <video src="video-images/Nissan Video.mp4" width="100%" type="video/mp4" controls></video>
             </div>
-            <div class="video-card">
+            <div class="video-card" id="serta-card">
                 <div class="video-text">
                     <h2>Serta</h2>
                     <h4>Ansira client</h4>
@@ -44,6 +47,14 @@
                 <video src="video-images/Alabama Sports Sponsorship Video - 30 (1).mp4" width="100%" type="video/mp4" controls></video>
             </div>
         </section>
+        <div class="video-footer">
+            <p class="pd-para">
+                © Priyanka Shrivastav
+            </p>
+            <p class="pd-para">
+                Print Design
+            </p>
+        </div>
     </div>
 </body>
 </html>
