--- a/digitaldesign.html
+++ b/digitaldesign.html
@@ -123,7 +123,7 @@
             <p class="pd-para-dd">
                     Google Ads
             </p>
-            <img class="creative5" src="digital-design-images/Screenshot 2025-11-04 at 10.39.41 PM.png" alt="">
+            <img class="creative5" src="digital-design-images/North-Shore.png" alt="">
         </div>
     </div>
 
@@ -132,7 +132,7 @@
             © 2025 Priyanka Shrivastava
         </p>
         <p class="pd-para">
-            Print Design
+            Digital Design
         </p>
     </div>
 </body>
