--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <p>Print Design</p>
                 </div>
             </a>
-            <a href="printdesign.html" class="card" id="motion-card">
+            <a href="motion-graphic.html" class="card" id="motion-card">
                 <div class="project-img-container">
                     <img src="images/Screenshot 2025-10-28 at 8.30.01 PM 1.png" alt="Motion Graphic">
                 </div>
