updated print design page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="about-content">
                 <h4>Creative Designer at Ansira</h4>
                 <h2>Hey ! I'm Priyanka</h2>
-                <p>Creative Designer shaping ideas into impactful visuals. I specialize in graphic design, video editing, motion graphics, and UI/UX design and research, blending creativity with user insight to craft designs that inspire and engage.</p>
+                <p>Creative Designer who believes great design lives where art meets intention. From digital and print graphics to motion and video, I bring ideas to life with color, rhythm, and emotion. Lately, my curiosity for UX research fuels my drive to design not just what looks good, but what feels right for the user.</p>
                 <div class="resume-link">
                     <p>My Resume</p>
                     <a href="#"><img src="images/Group 1.svg" alt="mark"></a>
@@ -135,16 +135,20 @@
         <div class="get-in-touch" id="contact">
             <h2>Get in touch</h2>
             <div class="btn-container">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/priyanka-shrivastav-designer/" target="_blank">
                     <p>Linkedin</p>
                     <img src="images/Group 1.svg" alt="mark">
                 </a>
-                <a href="#">
+                <a href="https://www.behance.net/priyankashrivastava" target="_blank">
                     <p>Behance</p>
                     <img src="images/Group 1.svg" alt="mark">
                 </a>
             </div>
             <h5>priyankashri88@gmail.com</h5>
+            <div class="resume-link-end">
+                    <p>My Resume</p>
+                    <a href="#"><img src="images/Arrow up-right.png" alt="mark"></a>
+                </div>
             <p class="copyright">© Priyanka Shrivastav</p>
         </div>
     </div>
