--- a/motion-graphic.html
+++ b/motion-graphic.html
@@ -27,7 +27,8 @@
                 <h2>Coca-cola</h2>
                 <h4>Ansira client</h4>
             </div>
-            <img class="billboad-img-mg" src="motion-graphics-images/Screenshot 2025-10-28 at 8.30.01 PM 1.png" alt="billboad">
+            <!-- <img class="billboad-img-mg" src="motion-graphics-images/Screenshot 2025-10-28 at 8.30.01 PM 1.png" alt="billboad"> -->
+             <video class="billboad-img-mg" src="video-images/Updated.mp4" type="video/mp4" height="650px" autoplay></video>
 
             <div class="line-container-mg">
                 <img class="line-img-mg" src="motion-graphics-images/Vector 3.png" alt="">
