--- a/printdesign.html
+++ b/printdesign.html
@@ -73,7 +73,7 @@
 
                 <div class="bobcat-footer">
                     <p class="pd-para">
-                        © 2025 Priyanka Shrivastava
+                        © Priyanka Shrivastav
                     </p>
                     <p class="pd-para">
                         Print Design
