placed line at bottom of billboard container

--- a/printdesign.html
+++ b/printdesign.html
@@ -21,7 +21,7 @@
         <div class="heading">
             <h2>Print Design</h2>
         </div>
-        <div class="billboad-container">
+        <div class="billboad-container" id="half-a-border-on-bottom">
             <div class="billboard-text">
                 <h2>Kohler</h2>
                 <h4>Ansira client</h4>
