Motion Graphic Page Updated

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p>Print Design</p>
                 </div>
             </a>
-            <a href="motion-graphic.html" class="card" id="motion-card">
+            <a href="motion-graphic.html" target="_blank" class="card" id="motion-card">
                 <div class="project-img-container">
                     <img src="images/Screenshot 2025-10-28 at 8.30.01 PM 1.png" alt="Motion Graphic">
                 </div>
