Fixed Motion Graphic Page

--- a/motion-graphic.html
+++ b/motion-graphic.html
@@ -102,7 +102,7 @@
                 © Priyanka Shrivastava
             </p>
             <p class="pd-para">
-                Motion Graphic
+                Motion Graphics
             </p>
         </div>
     </div>    
