Motion Graphic Done

--- a/motion-graphic.html
+++ b/motion-graphic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Motion Graphic</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="motion-graphic.css">
     <script src="script.js" defer></script>
@@ -99,7 +99,7 @@
         
         <div class="bobcat-footer-errors">
             <p class="pd-para">
-                © Priyanka Shrivastava
+                © Priyanka Shrivastav
             </p>
             <p class="pd-para">
                 Motion Graphics
