--- a/digitaldesign.html
+++ b/digitaldesign.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Digital Design</title>
     <link rel="stylesheet" href="digitaldesign.css">
     <script src="script.js" defer></script>
 </head>
