resume download feature

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>Creative Designer who believes great design lives where art meets intention. From digital and print graphics to motion and video, I bring ideas to life with color, rhythm, and emotion. Lately, my curiosity for UX research fuels my drive to design not just what looks good, but what feels right for the user.</p>
                 <div class="resume-link">
                     <p>My Resume</p>
-                    <a href="#"><img src="images/Group 1.svg" alt="mark"></a>
+                    <a href="pdf/Priyanka_Shrivastava_Resume.pdf" download ><img src="images/Group 1.svg" alt="mark"></a>
                 </div>
             </div>
             <div class="main-img">
