bottom resume link added

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <h5>priyankashri88@gmail.com</h5>
             <div class="resume-link-end">
                     <p>My Resume</p>
-                    <a href="#"><img src="images/Arrow up-right.png" alt="mark"></a>
+                    <a href="pdf/Priyanka_Shrivastava_Resume.pdf" download ><img src="images/Arrow up-right.png" alt="mark"></a>
                 </div>
             <p class="copyright">© Priyanka Shrivastav</p>
         </div>
